@@ -170,6 +170,7 @@ grub_reboot (void)
   grub_efi_fini ();
   efi_call_4 (grub_efi_system_table->runtime_services->reset_system,
               GRUB_EFI_RESET_COLD, GRUB_EFI_SUCCESS, 0, NULL);
+  for (;;) ;
 }
 #endif
 
@@ -179,6 +180,7 @@ grub_halt (void)
   grub_efi_fini ();
   efi_call_4 (grub_efi_system_table->runtime_services->reset_system,
               GRUB_EFI_RESET_SHUTDOWN, GRUB_EFI_SUCCESS, 0, NULL);
+  for (;;) ;
 }
 
 int
